# graph-rag

./: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml  setup.py
api/: __init__.py  endpoints.py  schemas.py
config/: general_config.yaml  prompt_templates.yaml  prompts.yaml  settings.py
examples/: chat_session.py  ingest_pdf.py  update_embeddings.py
frontend/: api_client.py  app.py
src/llm/: __init__.py  enums.py  extractor.py  factory.py  gemini_client.py  graph_client.py  guardrail.py  hybrid_search.py  ollama_client.py  utils.py  vllm_client.py
src/prompt_engineering/: extraction.py
tests/: test_queries.json  test_retries.py
