[project]
name = "project-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-neo4j>=0.8.0",
    "langchain-ollama>=1.0.1",
    "neo4j>=6.1.0",
    "pypdf>=6.6.0",
]
